--- a/index.html
+++ b/index.html
@@ -2,10 +2,5 @@
 layout: home
 author_profile: true
 header:
-<<<<<<< HEAD
-  image:"/images/bio-pic.jpeg"
-=======
-	image:"/images/bio-pic.jpeg"
-
->>>>>>> 6ba6fd5c27f582c88cb70cc8ed3773f3e2ced27d
+  image:"/images/icmc.jpg"
 ---
